# agentkit-cli

./: README.md  pyproject.toml  setup.py
agentkitcli/: main.py
agentkitcli/tools_bootstrap/: agent.yml  compose.yml.tmpl  tools.yml
